{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 27,
  "lineage": "2aec91d8-10b5-0cd0-ab25-f1cf3494dc36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf2b4e024cdb6960",
            "arn": "arn:aws:ec2:us-west-2:315870085622:instance/i-030f0ec3f68cde4a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030f0ec3f68cde4a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097754d38d6c747af",
            "private_dns": "ip-10-0-1-180.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-34-212-4-146.us-west-2.compute.amazonaws.com",
            "public_ip": "34.212.4.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb5b1ebf85f3b3cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c2ec6c7140a63e67"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005f8574f14aede51",
            "tags": {
              "Name": "MinecraftServer"
            },
            "tags_all": {
              "Name": "MinecraftServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2ec6c7140a63e67"
            ]
          },
          "dependencies": [
            "aws_security_group.minecraft_sg",
            "aws_subnet.minecraft_subnet",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "minecraft_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:315870085622:internet-gateway/igw-01362e9d724ad12b7",
            "id": "igw-01362e9d724ad12b7",
            "owner_id": "315870085622",
            "tags": {
              "Name": "minecraft_gw"
            },
            "tags_all": {
              "Name": "minecraft_gw"
            },
            "vpc_id": "vpc-00a4d0a5bd53b94e5"
          },
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "minecraft_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:315870085622:route-table/rtb-07852bce25641bdf8",
            "id": "rtb-07852bce25641bdf8",
            "owner_id": "315870085622",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01362e9d724ad12b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minecraft_rt"
            },
            "tags_all": {
              "Name": "minecraft_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a4d0a5bd53b94e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.minecraft_gw",
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:315870085622:security-group/sg-0c2ec6c7140a63e67",
            "description": "Allow Minecraft traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2ec6c7140a63e67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              }
            ],
            "name": "minecraft_sg",
            "name_prefix": "",
            "owner_id": "315870085622",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a4d0a5bd53b94e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "minecraft_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:315870085622:subnet/subnet-005f8574f14aede51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005f8574f14aede51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "315870085622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft_subnet"
            },
            "tags_all": {
              "Name": "minecraft_subnet"
            },
            "vpc_id": "vpc-00a4d0a5bd53b94e5"
          },
          "dependencies": [
            "aws_vpc.minecraft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "minecraft_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:315870085622:vpc/vpc-00a4d0a5bd53b94e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0378117c71c97fd72",
            "default_route_table_id": "rtb-0be2cd17a9b600479",
            "default_security_group_id": "sg-09e39a284adbe394a",
            "dhcp_options_id": "dopt-0e4af6f2b0d4f23af",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a4d0a5bd53b94e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be2cd17a9b600479",
            "owner_id": "315870085622",
            "tags": {
              "Name": "minecraft_vpc"
            },
            "tags_all": {
              "Name": "minecraft_vpc"
            }
          }
        }
      ]
    }
  ]
}